--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -17,7 +17,7 @@
 	<key>AutoHideTmuxClientSession</key>
 	<false/>
 	<key>CheckTestRelease</key>
-	<true/>
+	<false/>
 	<key>CloseBookmarksWindowAfterOpening</key>
 	<true/>
 	<key>ClosingHotkeySwitchesSpaces</key>
@@ -745,13 +745,19 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>204 369 1389 277 0 0 1920 1200 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>513 275 924 485 0 0 1920 1177 </string>
+	<string>512 720 606 456 0 0 1920 1200 </string>
+	<key>NSWindow Frame SUUpdateAlert</key>
+	<string>330 307 620 392 0 0 1280 800 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 801 570 376 0 0 1920 1177 </string>
+	<string>0 800 570 377 0 0 1920 1177 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>1048 421 585 376 0 0 1920 1177 </string>
+	<string>884 372 570 377 0 0 1920 1177 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
 	<string>585 335 585 376 0 0 1920 1177 </string>
+	<key>NeverWarnAboutShortLivedSessions_F205B8EE-D18A-4826-BD6C-E58BDE143BE8</key>
+	<true/>
+	<key>NeverWarnAboutShortLivedSessions_F205B8EE-D18A-4826-BD6C-E58BDE143BE8_selection</key>
+	<integer>0</integer>
 	<key>New Bookmarks</key>
 	<array>
 		<dict>
@@ -2233,12 +2239,41 @@
 			<string>/Users/ustasb</string>
 		</dict>
 	</array>
+	<key>NoSyncConfirmBeta</key>
+	<true/>
+	<key>NoSyncDoNotWarnBeforeMultilinePaste</key>
+	<true/>
+	<key>NoSyncDoNotWarnBeforeMultilinePaste_selection</key>
+	<integer>0</integer>
+	<key>NoSyncHaveShownPromoWithId_4</key>
+	<true/>
+	<key>NoSyncInstallationId</key>
+	<string>16298638-6D0C-4588-8CC7-1A9533B49555</string>
 	<key>NoSyncLastTipTime</key>
-	<real>458030414.05578899</real>
+	<real>489428607.86827803</real>
+	<key>NoSyncPermissionToShowTip</key>
+	<true/>
+	<key>NoSyncTimeOfFirstLaunchOfVersionWithTip</key>
+	<real>487958820.61962402</real>
 	<key>NoSyncTimeOfLastPromo</key>
-	<real>453339449.90675598</real>
+	<real>477628299.188317</real>
 	<key>NoSyncTimeOfLastPromoDownload</key>
-	<real>459499152.77249402</real>
+	<real>487865950.960473</real>
+	<key>NoSyncTipsDisabled</key>
+	<true/>
+	<key>NoSyncTipsToNotShow</key>
+	<array>
+		<string>000</string>
+		<string>0000</string>
+		<string>0001</string>
+		<string>0002</string>
+		<string>0003</string>
+		<string>0004</string>
+		<string>0005</string>
+		<string>0006</string>
+		<string>0007</string>
+		<string>0008</string>
+	</array>
 	<key>OnlyWhenMoreTabs</key>
 	<true/>
 	<key>OpenArrangementAtStartup</key>
@@ -2303,11 +2338,11 @@
 	<key>SUFeedAlternateAppNameKey</key>
 	<string>iTerm</string>
 	<key>SUFeedURL</key>
-	<string>http://iterm2.com/appcasts/testing.xml</string>
+	<string>https://iterm2.com/appcasts/final.xml?shard=9</string>
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2015-07-25T06:39:11Z</date>
+	<date>2016-11-19T05:46:15Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -2355,6 +2390,6 @@
 	<key>findRegex_iTerm</key>
 	<false/>
 	<key>iTerm Version</key>
-	<string>2.1.1</string>
+	<string>3.0.10</string>
 </dict>
 </plist>
