--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,10 +19,10 @@ set -g default-terminal "screen-256color"
 
 # Act like GNU Screen.
 set -g prefix C-a
-unbind C-b
+unbind-key C-b
 
 # To send C-a to the shell: C-a, C-a
-bind C-a send-prefix
+bind-key C-a send-prefix
 
 # Increase scrollback lines.
 set -g history-limit 50000
@@ -40,12 +40,16 @@ setw -g automatic-rename on
 set -g renumber-windows on
 
 # Enable mouse support (-q for quiet).
-set-option -g -q mouse on
+set -g -q mouse on
 
 # Behave like Vim.
 setw -g mode-keys vi
 # Ctrl-p/n for tmux command history in the status bar.
 set -g status-keys emacs
+
+# ENV vars to be updated when creating a new session.
+# https://stackoverflow.com/a/9833996/1575238
+set -ga update-environment "ITERM_PROFILE"
 
 # Enter copy-mode with PREFIX [
 bind-key -T copy-mode-vi 'v' send -X begin-selection
@@ -54,18 +58,21 @@ bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 # Use PREFIX | to split window horizontally and PREFIX - to split vertically.
-bind | split-window -h
-bind - split-window -v
+bind-key | split-window -h
+bind-key - split-window -v
 
 # Use PREFIX p and PREFIX n to cycle through windows.
-bind -r C-p select-window -t :-
-bind -r C-n select-window -t :+
+bind-key -r C-p select-window -t :-
+bind-key -r C-n select-window -t :+
 
 # Resize panes using PREFIX H, J, K, L
-bind -r H resize-pane -L 5
-bind -r J resize-pane -D 5
-bind -r K resize-pane -U 5
-bind -r L resize-pane -R 5
+bind-key -r H resize-pane -L 5
+bind-key -r J resize-pane -D 5
+bind-key -r K resize-pane -U 5
+bind-key -r L resize-pane -R 5
+
+# Quickly reload .tmux.conf
+bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
@@ -77,43 +84,13 @@ bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # Restore 'clear screen'.
-bind C-l send-keys 'C-l'
+bind-key C-l send-keys 'C-l'
 
 # Status bar
+set -g clock-mode-style 24
 set -g status-left ""
-set -g status-right "#[fg=white]%m-%d-%y %H:%M "
+set -g status-right "%m-%d-%y %H:%M "
 
-# Colors (credit: connrs/dotfiles/master/tmux/tomorrow-night.tmux)
-  # Status bar
-  set -g status-bg "#373b41"
-  set -g status-fg "#c5c8c6"
-
-  # Active window highlights
-  setw -g window-status-current-bg "#b4b7b5"
-  setw -g window-status-current-fg "#1d1f21"
-  setw -g window-status-current-attr bold
-
-  # Highlight activity in status bar.
-  setw -g window-status-activity-fg "#8abeb7"
-  setw -g window-status-activity-bg "#1d1f21"
-
-  # Pane border and colors
-  set -g pane-active-border-bg default
-  set -g pane-active-border-fg "#373b41"
-  set -g pane-border-bg default
-  set -g pane-border-fg "#373b41"
-
-  set -g clock-mode-colour "#81a2be"
-  set -g clock-mode-style 24
-
-  set -g message-bg "#8abeb7"
-  set -g message-fg "#000000"
-  set -g message-attr bold
-
-  set -g message-command-bg "#8abeb7"
-  set -g message-command-fg "#000000"
-
-  set -g mode-bg "#8abeb7"
-  set -g mode-fg "#000000"
-
-if-shell 'test -n "$USING_LIGHT_THEME"' "source-file ~/.tmux_light_theme.conf"
+# Colors
+set-hook -g after-new-session "source-file ~/dotfiles/tmux/apply_theme.conf"
+set-hook -g after-new-window "source-file ~/dotfiles/tmux/apply_theme.conf"
