--- a/.tmux.conf
+++ b/.tmux.conf
@@ -83,37 +83,40 @@ bind C-l send-keys 'C-l'
 set -g status-left ""
 set -g status-right "#[fg=white]%m-%d-%y %H:%M "
 
-# Colors (credit: connrs/dotfiles/master/tmux/tomorrow-night.tmux)
-  # Status bar
-  set -g status-bg "#373b41"
-  set -g status-fg "#c5c8c6"
+# Colors
+# To see all available colors to tmux: https://superuser.com/a/285400
+# colour0: black
+# colour11: grey
+# colour7: muddy white
+# colour8: unemphasized white
 
-  # Active window highlights
-  setw -g window-status-current-bg "#b4b7b5"
-  setw -g window-status-current-fg "#1d1f21"
+  # Active status bar
+  setw -g window-status-current-bg colour7
+  setw -g window-status-current-fg colour0
   setw -g window-status-current-attr bold
+  # Inactive status bar
+  set -g status-bg colour11
+  set -g status-fg colour8
 
-  # Highlight activity in status bar.
-  setw -g window-status-activity-fg "#8abeb7"
-  setw -g window-status-activity-bg "#1d1f21"
+  # Active panes
+  set -g pane-active-border-bg colour0
+  set -g pane-active-border-fg colour11
+  # Inactive panes
+  set -g pane-border-bg colour0
+  set -g pane-border-fg colour11
 
-  # Pane border and colors
-  set -g pane-active-border-bg default
-  set -g pane-active-border-fg "#373b41"
-  set -g pane-border-bg default
-  set -g pane-border-fg "#373b41"
-
-  set -g clock-mode-colour "#81a2be"
+  # Clock
+  set -g clock-mode-colour colour8
   set -g clock-mode-style 24
 
-  set -g message-bg "#8abeb7"
-  set -g message-fg "#000000"
+  # prefix + :
+  set -g message-bg colour7
+  set -g message-fg colour0
   set -g message-attr bold
 
-  set -g message-command-bg "#8abeb7"
-  set -g message-command-fg "#000000"
-
-  set -g mode-bg "#8abeb7"
-  set -g mode-fg "#000000"
+  # prefix + w
+  set -g mode-bg colour7
+  set -g mode-fg colour0
+  set -g mode-attr bold
 
 if-shell 'test -n "$USING_LIGHT_THEME"' "source-file ~/.tmux_light_theme.conf"
