--- a/.tmux.conf
+++ b/.tmux.conf
@@ -40,12 +40,16 @@ setw -g automatic-rename on
 set -g renumber-windows on
 
 # Enable mouse support (-q for quiet).
-set-option -g -q mouse on
+set -g -q mouse on
 
 # Behave like Vim.
 setw -g mode-keys vi
 # Ctrl-p/n for tmux command history in the status bar.
 set -g status-keys emacs
+
+# ENV vars to be updated when creating a new session.
+# https://stackoverflow.com/a/9833996/1575238
+set -ga update-environment "ITERM_PROFILE"
 
 # Enter copy-mode with PREFIX [
 bind-key -T copy-mode-vi 'v' send -X begin-selection
@@ -80,43 +84,11 @@ bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 bind C-l send-keys 'C-l'
 
 # Status bar
+set -g clock-mode-style 24
 set -g status-left ""
-set -g status-right "#[fg=white]%m-%d-%y %H:%M "
+set -g status-right "%m-%d-%y %H:%M "
 
 # Colors
-# To see all available colors to tmux: https://superuser.com/a/285400
-# colour0: black
-# colour11: grey
-# colour7: muddy white
-# colour8: unemphasized white
-
-  # Active status bar
-  setw -g window-status-current-bg colour7
-  setw -g window-status-current-fg colour0
-  setw -g window-status-current-attr bold
-  # Inactive status bar
-  set -g status-bg colour11
-  set -g status-fg colour8
-
-  # Active panes
-  set -g pane-active-border-bg colour0
-  set -g pane-active-border-fg colour11
-  # Inactive panes
-  set -g pane-border-bg colour0
-  set -g pane-border-fg colour11
-
-  # Clock
-  set -g clock-mode-colour colour8
-  set -g clock-mode-style 24
-
-  # prefix + :
-  set -g message-bg colour7
-  set -g message-fg colour0
-  set -g message-attr bold
-
-  # prefix + w
-  set -g mode-bg colour7
-  set -g mode-fg colour0
-  set -g mode-attr bold
-
-if-shell 'test -n "$USING_LIGHT_THEME"' "source-file ~/.tmux_light_theme.conf"
+# Gets run with `/bin/sh -c`
+if-shell '[[ $ITERM_PROFILE = "Tomorrow Night - Coding" ]]' "source-file ~/dotfiles/tmux_tomorrow_night_theme.conf"
+if-shell '[[ $ITERM_PROFILE = "Pencil Light - Writing" ]]' "source-file ~/dotfiles/tmux_pencil_light_theme.conf"
