--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -2509,11 +2509,11 @@
 			<key>Name</key>
 			<string>Pencil Light - Writing</string>
 			<key>Non Ascii Font</key>
-			<string>CourierPrime 14</string>
+			<string>CourierPrimeCode-Regular 14</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>CourierPrime 14</string>
+			<string>CourierPrimeCode-Regular 14</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
