--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -1633,7 +1633,7 @@
 			<key>Mouse Reporting</key>
 			<true/>
 			<key>Name</key>
-			<string>Tomorrow Night - Coding</string>
+			<string>Tomorrow Night</string>
 			<key>Non Ascii Font</key>
 			<string>SourceCodePro-Regular 11</string>
 			<key>Non-ASCII Anti Aliased</key>
@@ -2149,7 +2149,7 @@
 			<key>Custom Command</key>
 			<string>No</string>
 			<key>Custom Directory</key>
-			<string>Yes</string>
+			<string>No</string>
 			<key>Default Bookmark</key>
 			<string>No</string>
 			<key>Disable Printing</key>
@@ -2507,7 +2507,7 @@
 			<key>Mouse Reporting</key>
 			<true/>
 			<key>Name</key>
-			<string>Pencil Light - Writing</string>
+			<string>Pencil Light</string>
 			<key>Non Ascii Font</key>
 			<string>CourierPrimeCode-Regular 14</string>
 			<key>Non-ASCII Anti Aliased</key>
@@ -2710,7 +2710,7 @@
 			<key>Window Type</key>
 			<integer>0</integer>
 			<key>Working Directory</key>
-			<string>/Users/ustasb/notes</string>
+			<string>/Users/ustasb</string>
 		</dict>
 	</array>
 	<key>NoSyncConfirmBeta</key>
