--- a/.gitconfig
+++ b/.gitconfig
@@ -13,7 +13,8 @@
   # Pretty graph log (credit: http://fredkschott.com/post/2014/02/git-log-is-so-2005)
   lg = log --color --graph --pretty=format:'%C(auto)%h%Creset -%C(auto)%d%Creset %s %Cgreen(%cr)%C(blue) <%an>%Creset' --abbrev-commit
 [core]
-  editor = mvim -v
+  # My ~/.zshrc configures the vim alias correctly.
+  editor = vim
 [gpg]
   program = gpg2
 [commit]
