--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -1635,11 +1635,11 @@
 			<key>Name</key>
 			<string>Tomorrow Night</string>
 			<key>Non Ascii Font</key>
-			<string>SourceCodePro-Regular 11</string>
+			<string>Consolas 13</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>SourceCodePro-Regular 11</string>
+			<string>Consolas 13</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
@@ -2509,11 +2509,11 @@
 			<key>Name</key>
 			<string>Pencil Light</string>
 			<key>Non Ascii Font</key>
-			<string>CourierPrimeCode-Regular 14</string>
+			<string>Consolas 13</string>
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>CourierPrimeCode-Regular 14</string>
+			<string>Consolas 13</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
