--- a/.tmux.conf
+++ b/.tmux.conf
@@ -59,8 +59,8 @@ bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 # Use PREFIX p and PREFIX n to cycle through windows.
-bind-key -r C-p select-window -t :-
-bind-key -r C-n select-window -t :+
+bind-key -r C-h select-window -t :-
+bind-key -r C-l select-window -t :+
 
 # Resize panes using PREFIX H, J, K, L
 bind-key -r H resize-pane -L 5
@@ -79,9 +79,6 @@ bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
 bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
 bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
 bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
-
-# Restore 'clear screen'.
-bind-key C-l send-keys 'C-l'
 
 # Status bar
 set -g clock-mode-style 24
