--- a/.tmux.conf
+++ b/.tmux.conf
@@ -58,7 +58,7 @@ bind-key -T copy-mode-vi 'V' send -X select-line
 bind-key -T copy-mode-vi 'r' send -X rectangle-toggle
 bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
-# Use PREFIX p and PREFIX n to cycle through windows.
+# Use PREFIX h and PREFIX l to cycle through windows.
 bind-key -r C-h select-window -t :-
 bind-key -r C-l select-window -t :+
 
